--- a/packages/assets/style/reset.scss
+++ b/packages/assets/style/reset.scss
@@ -11,7 +11,7 @@ a {
 }
 
 input {
-  -webkit-appearance: none; // 去除苹果input阴影
+  -webkit-appearance: none; // 去苹果input阴影
 }
 :focus {
   outline: 0;
